--- a/ElCoffe/ElCoffe/ClientApp/src/app/footer/footer.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/footer/footer.component.html
@@ -1,23 +1,62 @@
-<footer class="footer">
+<!-- Footer -->
+<footer class="page-footer font-small cyan darken-3">
+
+  <!-- Footer Elements -->
   <div class="container">
-    <div class="navigation">
-      <ul>
-        <li>page1</li>
-        <li>page2</li>
-        <li>page3</li>
-        <li>comanda acum</li>
-      </ul>
+
+    <!-- Grid row-->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-12 py-5">
+        <div class="mb-5 flex-center">
+
+         
+          <!-- Twitter -->
+          <div>
+          <a class="tw-ic">
+            <img src="assets/images/android.svg" alt="">
+          </a></div>
+          <div>
+          <!-- Google +-->
+          <a class="gplus-ic">
+            <img src="assets/images/facebook.svg" alt="">
+          </a></div>
+          <div>
+          <!--Linkedin -->
+          <a class="li-ic">
+            <img src="assets/images/instagram.svg" alt="">
+          </a></div>
+          <div>
+          <!--Instagram-->
+          <a class="ins-ic">
+            <img src="assets/images/twitter.svg" alt="">
+          </a></div>
+          <div>
+           <!-- Facebook -->
+           <a class="fb-ic">
+            <img src="assets/images/apple.svg" alt="">
+          </a>
+          </div>
+          <!--Pinterest-->
+          <!-- <a class="pin-ic">
+            <img src="assets/images/apple.svg" alt="">
+          </a> -->
+        </div>
+      </div>
+      <!-- Grid column -->
+
     </div>
-    <div class="externals row">
-      <div class="col-4">
-        fb
-      </div>
-      <div class="col-4">
-        insta
-      </div>
-      <div class="col-4">
-        twit
-      </div>
-    </div>
+    <!-- Grid row-->
+
   </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+    <a href="https://www.facebook.com/tofan.iulian"> Tofi </a>
+  </div>
+  <!-- Copyright -->
+
 </footer>
+<!-- Footer -->
