--- a/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -19,6 +19,7 @@
       </li>
     </ul>
   </div>
+  <button  class="btn btn-primary">guci</button>
 </nav>
 
 <ng-template #loginTemplate let-modal>
