calls to server fix

--- a/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
   </div>
-  <button  class="btn btn-primary">guci</button>
+  <button  class="btn btn-primary" (click)="getall()">getall</button>
 </nav>
 
 <ng-template #loginTemplate let-modal>
