vali stuff commit

--- a/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -46,6 +46,21 @@
           <mat-form-field>
             <input matInput placeholder="Password" name="password" [(ngModel)]="user.password" required type="password">
           </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="FirstName" name="firstName" [(ngModel)]="user.firstName" required type="text">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="LastName" name="lastName" [(ngModel)]="user.lastName" required type="text">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="PhoneNumber" name="phoneNumber" [(ngModel)]="user.phoneNumber" required type="text">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Email" name="email" [(ngModel)]="user.email" required type="text">
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Address" name="address" [(ngModel)]="user.address" required type="text">
+          </mat-form-field>
         </div>
     </form>
   </div>
