--- a/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,25 +1,28 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" href="#">Angular</a>
+  <a class="navbar-brand" href="#">El Coffe</a>
   <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault"
     aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item dropdown" ngbDropdown>
+      <li *ngIf="currentUser">
+        {{currentUser.firstName}} {{currentUser.lastName}}
+      </li>
+      <!-- <li class="nav-item dropdown" ngbDropdown>
         <a class="nav-link dropdown-toggle" id="id01" href="#" ngbDropdownToggle>Files</a>
         <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
           <a class="dropdown-item" href="#">HTML</a>
           <a class="dropdown-item" href="#">TS</a>
           <a class="dropdown-item" href="#">JS</a>
         </div>
-      </li>
-      <li>
+      </li> -->
+      <!-- <li>
         <button class="btn btn-primary" (click)="openVerticallyCentered(loginTemplate)">Special Login Made for GUCI</button>
-      </li>
+      </li> -->
     </ul>
   </div>
-  <button  class="btn btn-primary" (click)="getall()">getall</button>
+  <button class="btn btn-primary" (click)="!currentUser ? openVerticallyCentered(loginTemplate) : goToMenu()">Comanda Acum</button>
 </nav>
 
 <ng-template #loginTemplate let-modal>
