--- a/ElCoffe/ElCoffe/ClientApp/src/app/home/home.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/home/home.component.html
@@ -35,9 +35,9 @@
 
 <div class='body-content'>
 
-  <div class="row">
+  <!-- <div class="row">
     <app-fetch-data></app-fetch-data>
-  </div>
+  </div> -->
 
   <div class="row">
     <div *ngFor="let offer of offers" class="col-12 col-md-6 col-lg-3 offer">
