--- a/ElCoffe/ElCoffe/ClientApp/src/app/home/home.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/home/home.component.html
@@ -30,7 +30,7 @@
     </div>
   </ng-template> -->
 </ngb-carousel>
-
+<img src="https://drive.google.com/open?id=1iYMQFBGpNvWGlwEqsP1VZyGPgzkPe63e" alt="nu merge :'('">
 
 
 <div class='body-content'>
@@ -41,7 +41,7 @@
 
   <div class="row">
     <div *ngFor="let offer of offers" class="col-12 col-md-6 col-lg-3 offer">
-      <app-small-description-card></app-small-description-card>
+      <app-small-description-card [isOffer]="true"></app-small-description-card>
     </div>
   </div>
   <div class="row">
