--- a/ElCoffe/ElCoffe/ClientApp/src/app/menu/menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/menu/menu.component.html
@@ -1,8 +1,18 @@
-
 <div class='body-content'>
   <div class="row">
+      <div *ngFor="let category of categories" class="col-6 col-md-3 col-lg-2 ">
+        <div (click)="selectCategory(category)" [style.color]="category.id == selectedCategory.id ? 'blue' : 'black'">
+            {{category.name}}
+        </div>
+      </div>
+
+      <div class="col-6 col-md-3 col-lg-2 " (click)="openModal(newCategoryModal)">
+          adauga
+      </div>
+  </div>
+  <div class="row">
     <div *ngFor="let product of products" class="col-12 col-md-6 col-lg-3 offer">
-      <app-small-description-card [(product)]="product" (buttonClick)="getProductById(product.id); openModal(editProduct)"></app-small-description-card>
+      <app-small-description-card [(product)]="product" (buttonClick)="getProductById(product.id); currentUser.isAdmin ? openModal(editProduct) : pickProduct(product)"></app-small-description-card>
     </div>
     <div class="col-12 col-md-6 col-lg-3 offer">
       <app-small-description-card isNew="true" (buttonClick)="openModal(newProductModal)"></app-small-description-card>
@@ -10,66 +20,90 @@
   </div>
 </div>
 
-
-<ng-template #newProductModal let-modal>
+<ng-template #newCategoryModal let-modal>
     <div class="modal-header">
-      <h4 class="modal-title">New Product</h4>
+      <h4 class="modal-title">New Category</h4>
       <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <div class="modal-body">
       <form #form="ngForm">
-        <div *ngIf="newProduct">
+        <div *ngIf="newCategory">
           <mat-form-field>
-            <input matInput placeholder="Name" name="name" [(ngModel)]="newProduct.name" required type="text">
+            <input matInput placeholder="Name" name="name" [(ngModel)]="newCategory.name" required type="text">
           </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Description" name="description" [(ngModel)]="newProduct.description" required type="text">
+            <input matInput placeholder="Description" name="description" [(ngModel)]="newCategory.description" required type="text">
           </mat-form-field>
-          <mat-form-field>
-            <input matInput placeholder="Price" name="price" [(ngModel)]="newProduct.price" required>
-          </mat-form-field>
-          <mat-form-field>
-              <input matInput placeholder="Weight" name="weight" [(ngModel)]="newProduct.weight" required>
-            </mat-form-field>
         </div>
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-success" [disabled]="form.invalid" (click)="createProduct(); modal.close('Close click')">Add</button>
+      <button type="button" class="btn btn-success" [disabled]="form.invalid" (click)="createCategory(); modal.close('Close click')">Add</button>
       <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Cloase</button>
     </div>
   </ng-template>
 
-  <ng-template #editProduct let-modal>
-      <div class="modal-header">
-        <h4 class="modal-title">New Product</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-          <span aria-hidden="true">&times;</span>
-        </button>
+<ng-template #newProductModal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">New Product</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form #form="ngForm">
+      <div *ngIf="newProduct">
+        <mat-form-field>
+          <input matInput placeholder="Name" name="name" [(ngModel)]="newProduct.name" required type="text">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Description" name="description" [(ngModel)]="newProduct.description" required type="text">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Price" name="price" [(ngModel)]="newProduct.price" required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Weight" name="weight" [(ngModel)]="newProduct.weight" required>
+        </mat-form-field>
       </div>
-      <div class="modal-body">
-        <form #form="ngForm">
-          <div *ngIf="selectedProduct">
-            <mat-form-field>
-              <input matInput placeholder="Name" name="name" [(ngModel)]="selectedProduct.name" required type="text">
-            </mat-form-field>
-            <mat-form-field>
-              <input matInput placeholder="Description" name="description" [(ngModel)]="selectedProduct.description" required type="text">
-            </mat-form-field>
-            <mat-form-field>
-              <input matInput placeholder="Price" name="price" [(ngModel)]="selectedProduct.price" required>
-            </mat-form-field>
-            <mat-form-field>
-                <input matInput placeholder="Weight" name="weight" [(ngModel)]="selectedProduct.weight" required>
-              </mat-form-field>
-          </div>
-        </form>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-success" [disabled]="form.invalid" (click)="createProduct(); modal.close('Close click')">Add</button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Cloase</button>
+  </div>
+</ng-template>
+
+<ng-template #editProduct let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">New Product</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form #form="ngForm">
+      <div *ngIf="selectedProduct">
+        <mat-form-field>
+          <input matInput placeholder="Name" name="name" [(ngModel)]="selectedProduct.name" required type="text">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Description" name="description" [(ngModel)]="selectedProduct.description" required type="text">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Price" name="price" [(ngModel)]="selectedProduct.price" required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Weight" name="weight" [(ngModel)]="selectedProduct.weight" required>
+        </mat-form-field>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success" [disabled]="form.invalid" (click)="updateProduct(); modal.close('Close click')">Save</button>
-        <button type="button" class="btn btn-danger" [disabled]="form.invalid" (click)="deleteProduct(); modal.close('Close click')">Delete</button>
-        <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Cloase</button>
-      </div>
-    </ng-template>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-success" [disabled]="form.invalid" (click)="updateProduct(); modal.close('Close click')">Save</button>
+    <button type="button" class="btn btn-danger" [disabled]="form.invalid" (click)="deleteProduct(); modal.close('Close click')">Delete</button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Cloase</button>
+  </div>
+</ng-template>
