--- a/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,22 +1,28 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand" href="#">El Coffe</a>
+  <a class="navbar-brand pointer">El Coffe</a>
   <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault"
     aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
+  <div *ngIf="currentUser"  [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
     <ul class="navbar-nav mr-auto">
-      <li *ngIf="currentUser">
-        {{currentUser.firstName}} {{currentUser.lastName}}
-      </li>
-      <!-- <li class="nav-item dropdown" ngbDropdown>
-        <a class="nav-link dropdown-toggle" id="id01" href="#" ngbDropdownToggle>Files</a>
+      <li class="nav-item dropdown" ngbDropdown>
+        <a class="nav-link dropdown-toggle pointer" id="id01" ngbDropdownToggle>{{currentUser.firstName}} {{currentUser.lastName}}</a>
         <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
-          <a class="dropdown-item" href="#">HTML</a>
-          <a class="dropdown-item" href="#">TS</a>
-          <a class="dropdown-item" href="#">JS</a>
+          <a class="dropdown-item pointer" (click)="logout()">Log Out</a>
+          <a class="dropdown-item pointer" (click)="logout()" *ngIf="currentUser.isAdmin">List Of Users</a>
+          <a class="dropdown-item pointer" (click)="logout()" *ngIf="currentUser.isEmployee">List Of Orders</a>
+          <a class="dropdown-item pointer" (click)="logout()">My Order</a>
         </div>
-      </li> -->
+      </li>
+      <li *ngIf="currentUser.isAdmin" class="nav-item dropdown" ngbDropdown>
+        <a class="nav-link dropdown-toggle pointer" id="id01" ngbDropdownToggle>Administrare</a>
+        <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
+          <a class="dropdown-item pointer" (click)="goToListOfUsers()">List Of Users</a>
+          <a class="dropdown-item pointer" (click)="goToListOfStatuses()">List Of Statuses</a>
+          <a class="dropdown-item pointer" (click)="goToListOfOrders()" >List Of Orders</a>
+        </div>
+      </li>
       <!-- <li>
         <button class="btn btn-primary" (click)="openVerticallyCentered(loginTemplate)">Special Login Made for GUCI</button>
       </li> -->
@@ -69,7 +75,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-success" (click)="register ? registerFunc() : register = true" [disabled]="register ? form.invalid : false">Register</button>
-    <button type="button" class="btn btn-success" (click)="!register ? login() : register = false" [disabled]="!register ? form.invalid : false">{{register ? 'Back to Login' : 'Autentificare'}}</button>
+    <button type="button" class="btn btn-success" (click)="!register ? login(modal) : register = false" [disabled]="!register ? form.invalid : false">{{register ? 'Back to Login' : 'Autentificare'}}</button>
     <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Close</button>
   </div>
 </ng-template>
