--- a/ElCoffe/ElCoffe/ClientApp/src/app/footer/footer.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/footer/footer.component.html
@@ -19,13 +19,13 @@
           </a></div>
           <div>
           <!-- Google +-->
-          <a class="gplus-ic">
-            <img src="assets/images/facebook.svg" alt="">
+          <a class="gplus-ic" href="https://www.facebook.com/ElCoffe-847487368951876/">
+            <img src="assets/images/facebook.svg"  alt="">
           </a></div>
           <div>
           <!--Linkedin -->
-          <a class="li-ic">
-            <img src="assets/images/instagram.svg" alt="">
+          <a class="li-ic" href="https://www.instagram.com/elcoffe7/?hl=en">
+            <img src="assets/images/instagram.svg"  alt="">
           </a></div>
           <div>
           <!--Instagram-->
@@ -54,7 +54,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
-    <a href="https://www.facebook.com/tofan.iulian"> Tofi </a>
+    <a href="https://www.facebook.com/ElCoffe-847487368951876/"> The Team </a>
   </div>
   <!-- Copyright -->
 
