--- a/ElCoffe/ElCoffe/ClientApp/src/app/menu/menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class='body-content'>
-  <div class="row">
+  <div class="row" style="padding-bottom: 15px">
       <div *ngFor="let category of categories" class="col-6 col-md-3 col-lg-2 ">
         <div (click)="selectCategory(category)" [style.color]="category.id == selectedCategory.id ? 'blue' : 'black'">
             {{category.name}}
