--- a/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-  <a class="navbar-brand pointer">El Coffe</a>
+    <img style="width: 40px; padding-right: 10px" src="assets/images/logo.jpg" alt="" (click)="goToHome()">
+  <a class="navbar-brand pointer"  (click)="goToHome()">El Coffe</a>
   <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault"
     aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,16 +11,14 @@
         <a class="nav-link dropdown-toggle pointer" id="id01" ngbDropdownToggle>{{currentUser.firstName}} {{currentUser.lastName}}</a>
         <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
           <a class="dropdown-item pointer" (click)="logout()">Log Out</a>
-          <a class="dropdown-item pointer" (click)="logout()" *ngIf="currentUser.isAdmin">List Of Users</a>
-          <a class="dropdown-item pointer" (click)="logout()" *ngIf="currentUser.isEmployee">List Of Orders</a>
-          <a class="dropdown-item pointer" (click)="logout()">My Order</a>
+          <a class="dropdown-item pointer" (click)="goToMyOrder()">My Order</a>
         </div>
       </li>
-      <li *ngIf="currentUser.isAdmin" class="nav-item dropdown" ngbDropdown>
+      <li *ngIf="currentUser.isAdmin || currentUser.isEmployee || currentUser.isCourier" class="nav-item dropdown" ngbDropdown>
         <a class="nav-link dropdown-toggle pointer" id="id01" ngbDropdownToggle>Administrare</a>
         <div class="dropdown-menu" aria-labelledby="id01" ngbDropdownMenu>
-          <a class="dropdown-item pointer" (click)="goToListOfUsers()">List Of Users</a>
-          <a class="dropdown-item pointer" (click)="goToListOfStatuses()">List Of Statuses</a>
+          <a *ngIf="currentUser.isAdmin" class="dropdown-item pointer" (click)="goToListOfUsers()">List Of Users</a>
+          <a *ngIf="currentUser.isAdmin" class="dropdown-item pointer" (click)="goToListOfStatuses()">List Of Statuses</a>
           <a class="dropdown-item pointer" (click)="goToListOfOrders()" >List Of Orders</a>
         </div>
       </li>
