--- a/ElCoffe/ElCoffe/ClientApp/src/app/orders/orders.component.html
+++ b/ElCoffe/ElCoffe/ClientApp/src/app/orders/orders.component.html
@@ -1,3 +1,78 @@
-<p>
-  orders works!
-</p>
+<div class='body-content'>
+  <table *ngIf="showTable" style="width: 100%" mat-table [dataSource]="orderXUser" class="mat-elevation-z8">
+  
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id. </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef> Last Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="phoneNumber">
+        <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+        <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef> Address </th>
+          <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="details">
+          <th mat-header-cell *matHeaderCellDef> Detalii </th>
+          <td mat-cell *matCellDef="let element"> {{element.details}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="statusId">
+            <th mat-header-cell *matHeaderCellDef> Staus Id </th>
+            <td mat-cell *matCellDef="let element" >
+                {{element.status.id}}
+              <mat-select placeholder="Select me" [(value)]="element.status.id" (selectionChange)="updateOrder(element)">
+                <mat-option *ngFor="let status of statuses" [value]="status.id">{{status.id}} {{status.name}}</mat-option>
+              </mat-select>
+             </td>
+          </ng-container>
+  
+      <!-- <ng-container matColumnDef="isCourier">
+        <th mat-header-cell *matHeaderCellDef> Courier </th>
+        <td mat-cell *matCellDef="let element"> <mat-checkbox class="example-margin" [(ngModel)]="element.isCourier" (change)="updateUser(element)"></mat-checkbox> </td>
+      </ng-container> -->
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+  <!-- <table style="width: 100%" mat-table [dataSource]="orders" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef> Adress </th>
+      <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="details">
+      <th mat-header-cell *matHeaderCellDef> Detalii </th>
+      <td mat-cell *matCellDef="let element"> {{element.details}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table> -->
+</div>
